# BFBrain

./: .readthedocs.yaml  =0.4.13  =0.7  =1.11.0  =1.12  =1.23.0  =2.13  =3.7.1  LICENSE  README.md  pyproject.toml
bfbrain/: AL_Metrics.py  BFB_Learner.py  Custom_Layers.py  Data_Manager.py  False_Proximity_Test.py  Hypersphere_Formulas.py  Jax_Oracle.py  Potential_Functions.py  Score_Functions.py  __init__.py
docs/: requirements.txt
docs/source/: analysis.rst  classifier.rst  conf.py  data_manager.rst  index.rst  training.rst  tutorial.rst
docs/source/example_outputs/: output.txt
examples/: tutorial_step_1.ipynb  tutorial_step_2.ipynb  tutorial_step_3.ipynb  tutorial_step_4.ipynb
examples/saved_AL/: data_train.npz  data_val.npz  dm.pickle  history.pickle  output.txt  variables.pickle
examples/saved_AL/model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
examples/saved_AL/model/variables/: variables.data-00000-of-00001  variables.index
examples/saved_AL_untrained/: data_train.npz  dm.pickle  history.pickle  variables.pickle
examples/saved_AL_untrained/model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
examples/saved_AL_untrained/model/variables/: variables.data-00000-of-00001  variables.index
